--- a/packages/rag/llama-index/samples/LlamaIndex_Local-Models_L4T.ipynb
+++ b/packages/rag/llama-index/samples/LlamaIndex_Local-Models_L4T.ipynb
@@ -34,16 +34,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3609cf0a-b46e-4f1b-805c-4c86e7c383ea",
+   "id": "56b07549-9383-456d-8ffb-216fa8bd3cf3",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# Run these on Docker host side (natively on Jetson)\n",
+    "!ls -lR /data/documents/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "225331c0-da65-4d9f-98cb-923bd5908840",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "> If not, run the following cell to copy the files."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc5a5d59-1bc6-421f-80be-a740229ac7fc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!mkdir -p /data/documents/L4T-README\n",
+    "!cp ./L4T-README/*.txt /data/documents/L4T-README"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ce69b57-77e6-4545-8dc1-a20bf4d91246",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "> Or run the following commands **on Docker host side (natively on Jetson)**\n",
+    "\n",
+    "```\n",
     "cd jetson-containers\n",
     "mkdir -p data/documents/L4T-README\n",
-    "cp /media/jetson/L4T-README/*.txt data/documents/L4T-README/"
+    "cp /media/jetson/L4T-README/*.txt data/documents/L4T-README/\n",
+    "```"
    ]
   },
   {
@@ -53,7 +89,27 @@
    "source": [
     "## Download the Llama2 model\n",
     "\n",
-    "Download the Llama2 model using `ollama` command."
+    "Check if you have Llama2 13B model downloaded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0456c238-5450-422f-8936-b6a07d82fb3b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!ollama list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69b8093f-31a8-4687-aaf0-260f90b5f34a",
+   "metadata": {},
+   "source": [
+    "> If not, run the following cell to download the Llama2 model using `ollama` command."
    ]
   },
   {
@@ -63,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!ollama pull llama2"
+    "!ollama pull llama2:13b"
    ]
   },
   {
@@ -74,6 +130,14 @@
    },
    "source": [
     "## Load data and build an index"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c87cfee-6219-4376-8e59-509a622c8115",
+   "metadata": {},
+   "source": [
+    "Enable DEBUG output."
    ]
   },
   {
@@ -95,25 +159,115 @@
     "\n",
     "# llama_index.core.set_global_handler(\"simple\")\n",
     "logging.basicConfig(stream=sys.stdout, level=logging.DEBUG)\n",
-    "logging.getLogger().addHandler(logging.StreamHandler(stream=sys.stdout))\n",
-    "\n",
-    "reader = SimpleDirectoryReader(input_dir=\"/data/documents/L4T-README/\")\n",
-    "documents = reader.load_data()\n",
-    "print(f\"Loaded {len(documents)} docs\")\n",
-    "\n",
+    "logging.getLogger().addHandler(logging.StreamHandler(stream=sys.stdout))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7be6e88-dfde-432c-be4d-f843b34336dd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "reader = SimpleDirectoryReader(input_dir=\"/data/documents/L4T-README/\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85d110b4-2a30-4f0c-af81-85a41d720d49",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "documents = reader.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d67b299-fdb8-469f-950c-070220b48965",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "len(documents)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "315b478d-c721-4863-83fc-ea57caa73d8b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# bge embedding model\n",
-    "Settings.embed_model = resolve_embed_model(\"local:BAAI/bge-large-en-v1.5\")\n",
-    "\n",
+    "Settings.embed_model = resolve_embed_model(\"local:BAAI/bge-large-en-v1.5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4cad9359-8c60-46a9-8acb-ca0ad1b79abc",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# ollama\n",
-    "Settings.llm = Ollama(model=\"llama2:13b\", request_timeout=300.0)\n",
-    "\n",
+    "Settings.llm = Ollama(model=\"llama2:13b\", request_timeout=300.0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9dd0b9e-cf1d-48f3-8e4d-75f7fa7130c9",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
     "# Enlarge the chunk size from the default 1024\n",
     "Settings.chunk_size = 4096\n",
-    "Settings.chunk_overlap = 200\n",
-    "\n",
-    "index = VectorStoreIndex.from_documents(\n",
-    "    documents,\n",
-    ")"
+    "Settings.chunk_overlap = 200"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccd18df3-d52a-4002-8884-64c79401849b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "index = VectorStoreIndex.from_documents(documents)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f1a4dfa-596d-4261-b09c-031d171d422e",
+   "metadata": {},
+   "source": [
+    "You can check what's indexed by saving in `storage` directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5cd69846-fd2d-408b-bb61-4fbc28e85f55",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "index.storage_context.persist()"
    ]
   },
   {
@@ -133,17 +287,49 @@
    },
    "outputs": [],
    "source": [
-    "query_engine = index.as_query_engine()\n",
-    "\n",
-    "response = query_engine.query(\"What IPv4 address Jetson device gets assigned when connected to a PC with a USB cable? And what file to edit in order to change the IP address to be assigned to Jetson itself in USB device mode? Plesae state which section you find the answer for each question.\")\n",
-    "\n",
-    "print(response)"
+    "query_engine = index.as_query_engine()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f23e03d-acf3-4dc3-9416-d6c57424e356",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "response = query_engine.query(\"What IPv4 address Jetson device gets assigned when connected to a PC with a USB cable? \\\n",
+    "    And what file to edit in order to change the IP address to be assigned to Jetson itself in USB device mode? \\\n",
+    "    Plesae state which section you find the answer for each question.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b862a313-8dc8-43bc-ad07-fd3dbeff023b",
+   "metadata": {},
+   "source": [
+    "Let's check the response."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "5fc566dd-e2c7-41d9-8f9e-3de55cfde2d7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "display(Markdown(f\"<b>{response}</b>\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ac876c8e-e0b5-4a54-99e7-4db5b7c79095",
    "metadata": {},
    "outputs": [],
    "source": []
